force-app/main/default/objects/ServiceResource/fields/FSL__Priority__c.field-meta.xml
<CustomField>
    <fullName>FSL__Priority__c</fullName>
    <label>Priority</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>