force-app/main/default/objects/ServiceResource/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner: Name</label>
    <type>Text</type>
</CustomField>