force-app/main/default/objects/ServiceResource/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Field is referenced for Vehicle Inspection reporting to group records by Region.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Calgary</fullName>
            </value>
            <value>
                <fullName>Edmonton</fullName>
            </value>
            <value>
                <fullName>Lethbridge</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Markham</fullName>
            </value>
            <value>
                <fullName>Mississauga</fullName>
            </value>
            <value>
                <fullName>Montreal</fullName>
            </value>
            <value>
                <fullName>Ottawa</fullName>
            </value>
            <value>
                <fullName>Quebec</fullName>
            </value>
            <value>
                <fullName>Trois Rivieres</fullName>
                <isActive>false</isActive>
                <label>Trois Rivieres</label>
            </value>
            <value>
                <fullName>Vancouver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>