force-app/main/default/objects/ServiceResource/fields/Travel_Factor__c.field-meta.xml
<CustomField>
    <fullName>Travel_Factor__c</fullName>
    <defaultValue>0.20</defaultValue>
    <description>Percentage of time this Service Resource spends on travel. Defaults to 20%.</description>
    <inlineHelpText>Percentage of time this Service Resource spends on travel. Defaults to 20%.</inlineHelpText>
    <label>Travel Factor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>