force-app/main/default/objects/ServiceResource/fields/X4x10_Day_Off__c.field-meta.xml
<CustomField>
    <fullName>X4x10_Day_Off__c</fullName>
    <label>4x10 Day Off</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>