force-app/main/default/objects/ServiceResource/validationRules/Travel_Factor_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Travel_Factor_Limit</fullName>
    <active>true</active>
    <description>Travel factor cannot be more than 100% or less than 0%.</description>
    <errorConditionFormula>OR(Travel_Factor__c &gt; 1, Travel_Factor__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Travel_Factor__c</errorDisplayField>
    <errorMessage>Travel factor cannot be more than 100% or less than 0%.</errorMessage>
</ValidationRule>