force-app/main/default/objects/ServiceResource/listViews/Ottawa.listView-meta.xml
<ListView>
    <fullName>Ottawa</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>License_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Ottawa</value>
    </filters>
    <filters>
        <field>ResourceType</field>
        <operation>equals</operation>
        <value>T</value>
    </filters>
    <filters>
        <field>Resource_ID_Casesafe__c</field>
        <operation>notEqual</operation>
        <value>0Hnf1000000KykdCAC</value>
    </filters>
    <label>Technicians: Ottawa</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>